# av-sim-bench

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: p2_golden.yaml  p2_noisy.yaml  p2_regression.yaml
docs/: dashboard.html  index.html
docs/data/: metrics.json  p1_womd_metrics.json  p2_metrics.json
src/eval/: ab_framework.py  stat_tests.py  viz.py
src/evaluator/: cli.py  db.py  log_gen.py  metrics.py  schema.py  sim_metrics.py  womd_adapter.py
src/generators/: baseline.py  deterministic.py  stochastic.py
src/sim/: agent.py  config.py  graph.py  loop.py
tests/: test_ab_framework.py  test_agent.py  test_db.py  test_graph.py  test_metrics.py  test_pipeline.py  test_sim_metrics.py  test_stat_tests.py  test_womd_adapter.py
