[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-log-evaluator"
version = "0.1.0"
description = "Log-replay evaluation pipeline for simulated driving data"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "duckdb",
    "pyarrow",
    "numpy",
    "matplotlib",
    "click",
]

[project.scripts]
evaluator = "evaluator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
